PR/41094: Matteo Beccati: sigtimedwait returns EAGAIN instead of EINVAL if timeout is invalid